Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 
 - task: Maven@3
   inputs:
-    mavenPomFile: '$(Build.SourcesDirectory)/Devops/happytails/pom.xml'
+    mavenPomFile: 'happytails/pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.17'
